--- a/deck.js-custom-extensions/cube.css
+++ b/deck.js-custom-extensions/cube.css
@@ -18,11 +18,11 @@
     -o-transition: all 1s ease-in-out 0ms;
     transition: all 1s ease-in-out 0ms; }
 .csstransitions.csstransforms .deck-container:not(.deck-menu) > .slide .slide {
-    -webkit-transition: opacity 1s ease-in-out 0ms;
-    -moz-transition: opacity 1s ease-in-out 0ms;
-    -ms-transition: opacity 1s ease-in-out 0ms;
-    -o-transition: opacity 1s ease-in-out 0ms;
-    transition: opacity 1s ease-in-out 0ms; }
+    -webkit-transition: opacity 0.5s ease 0ms;
+    -moz-transition: opacity 0.5s ease 0ms;
+    -ms-transition: opacity 0.5s ease 0ms;
+    -o-transition: opacity 0.5s ease 0ms;
+    transition: opacity 0.5s ease 0ms; }
 .csstransitions.csstransforms .deck-container:not(.deck-menu) > .deck-previous:not(.deck-child-current),
 .csstransitions.csstransforms .deck-container:not(.deck-menu) > .deck-before:not(.deck-child-current) {
     -webkit-transform: rotateY(-90deg) translateZ(400px) translateX(-400px);
@@ -39,5 +39,4 @@
     -o-transform: rotateY(90deg) translateZ(400px) translateX(400px);
     transform: rotateY(90deg) translateZ(400px) translateX(400px);
     opacity: 0; }
-
 
