--- a/presentation-style/slides.css
+++ b/presentation-style/slides.css
@@ -63,8 +63,14 @@ body > footer {
     min-height: 0;
     margin: 0;
     padding: 0;
+    padding-right: 7px;
 }
 
 .slide .static img {
     margin: 0 0;
+}
+
+.deck-container .slide code {
+    font-family: 'Ubuntu Mono', monospace;
+    color: darkSlateGray;
 }
